--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,31 @@
 spring.application.name=conta_bancaria
 
-# ===============================
-# Configuração do Admin Provisório
-# ===============================
-sistema.admin.email=admin@banco.com
+sistema.admin.cpf=00000000000
 sistema.admin.senha=admin123
 
-# ===============================
-# Configuração do Banco (H2)
-# ===============================
-spring.datasource.url=jdbc:h2:mem:escola
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=1
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# Console H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# ===============================
-# Configuração JWT (exemplo)
-# ===============================
-# ${JWT_SECRET}
 security.jwt.secret=mysupersecretkeymysupersecretkey123!
 security.jwt.expiration=600
+
+#link do swagger: http://localhost:8080/swagger-ui/index.html
+
+# Configuração do broker (exemplo local)
+mqtt.broker-url=tcp://localhost:1883
+mqtt.client-id=app-local
+mqtt.username=
+mqtt.password=
+
+# Configurações adicionais
+mqtt.clean-session=true
+mqtt.automatic-reconnect=true
+mqtt.keep-alive-interval=60
+mqtt.connection-timeout=30
+mqtt.default-qos=1
+
+# Exemplo com SSL
+# mqtt.broker-url=ssl://meu-broker:8883
+# javax.net.ssl.trustStore=classpath:meu_truststore.jks
+# javax.net.ssl.trustStorePassword=minhasenha
+# javax.net.ssl.trustStoreType=JKS
+
+#mosquitto_sub -h localhost -t "topico/mensagem/rest"
+#mosquitto_pub -h localhost -t "topico/mensagem/mqtt" -m '{\"nome\": \"nome para mqtt no powershell\", \"conteudo\": \"conteudo para mqtt no powershell\"}'
