--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,14 @@ mqtt.default-qos=1
 # javax.net.ssl.trustStorePassword=minhasenha
 # javax.net.ssl.trustStoreType=JKS
 
-#mosquitto_sub -h localhost -t "topico/mensagem/rest"
-#mosquitto_pub -h localhost -t "topico/mensagem/mqtt" -m '{\"nome\": \"nome para mqtt no powershell\", \"conteudo\": \"conteudo para mqtt no powershell\"}'
+# Mqtt no powershell
+#mosquitto_pub -h localhost -t "banco/dispositivoIoT" -m '{\"codigoSerial\": \"123\", \"chavePublica\": \"123\", \"cpfCliente\": \"12345678910\"}'
+
+# Banco de dados mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/conta_bancaria
+spring.datasource.username=root
+spring.datasource.password=senaisp
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
